Thu Jul  4 15:00:06 2002  Jeff Parsons <parsons@cs.wustl.edu>

        * orbsvcs/IFR_Service/ifr_visitor.cpp:

	  Added missing 'int' return type to visit_component() and
	  visit_home().

Thu Jul  4 12:58:57 2002  Mayur Deshpande  <mayur@ics.uci.edu>

	* tests/AMH_Exceptions/Makefile:
	  Added missing TAO_ROOT variable definition.  Thanks to Craig Rodrigues 
    <crodrigu@bbn.com> for reporting this.

Thu Jul  4 11:50:51 2002  Jeff Parsons <parsons@cs.wustl.edu>

        * TAO_IDL/ast/ast_array.cpp:
        * TAO_IDL/ast/ast_decl.cpp:
        * TAO_IDL/ast/ast_field.cpp:
        * TAO_IDL/ast/ast_structure.cpp:
        * TAO_IDL/include/ast_array.h:
        * TAO_IDL/include/ast_decl.h:
        * TAO_IDL/include/ast_field.h:
        * TAO_IDL/include/ast_sequence.h:
        * TAO_IDL/include/ast_structure.h:

          Added methods to determine if an aggregate type contains
          a wstring at some nested level. This will be useful for
          generating (de)marshaling code, since the encoding of
          wstrings depends on the GIOP version. What's been added
          above will not affect generated code at all, that part
          is still TODO.

        * TAO_IDL/ast/ast_enum.cpp:
        * TAO_IDL/be/be_enum.cpp:

          Moved size type initialization to the front end node.

        * TAO_IDL/be/be_tmplinst.cpp:

          Added #include file. Thanks to Marvin Wolfthal <maw@weichi.com> 
          for pointing it out.

        * TAO_IDL/include/ast_native.h:

          Cosmetic changes.

        * TAO_IDL/include/ast_visitor.h:

          Corrected some comments.

Thu Jul 04 08:17:11 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* tao/Transport.h:
	* tao/Transport.cpp (close_connection_shared): 
	* tao/Transport.inl: Fixed some comments and did some cosmetic
	  fixes. Added a new method by name transport_cache_manager ()
	  that returns the Transport_Cache_Manager from the ORB
	  core. 
	