@@ -1,3 +1,11 @@
+Thu Jul  4 15:25:33 2002  Jeff Parsons <parsons@cs.wustl.edu>
+
+        * TAO_IDL/be/be_visitor_valuetype/arglist.cpp:
+
+          Added generation of newline where it will separate the
+          environment parameter from any previous parameters. They
+          were running together and causing build errors.
+
 Thu Jul  4 15:00:06 2002  Jeff Parsons <parsons@cs.wustl.edu>
 
         * orbsvcs/IFR_Service/ifr_visitor.cpp:
